--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -38,7 +38,7 @@
                     </button>
                 </div>
             </nav>
-            <section id="main-header" class="py-2 bg-primary text-white"> 
+            <section id="main-header" class="py-2 text-white" style="background-color: #52796f"> 
                     <div class="row">
                         <div class="col-md-6">
                             <h1><i class="fas fa-tree"></i> Árboles</h1>
